[gd_scene load_steps=51 format=3 uid="uid://e0q2iffvt7qr"]

[ext_resource type="Script" path="res://Elements/levels/main_levels/L10.gd" id="1_1wb2c"]
[ext_resource type="PackedScene" uid="uid://k4l3uo63ncq5" path="res://Art/blend/levels_chapter1/c1_m10.blend" id="2_sr2kr"]
[ext_resource type="Shader" uid="uid://cxc0ggxlkoqeh" path="res://Art/materials/charred_ground.tres" id="3_eni4t"]
[ext_resource type="Material" uid="uid://cjl8no2f4qs2h" path="res://Art/materials/floor.material" id="4_jphlb"]
[ext_resource type="Material" uid="uid://cdpq1kptvx6j5" path="res://Art/materials/walls.material" id="5_xsm5t"]
[ext_resource type="Shader" uid="uid://cauq81cpr1xjv" path="res://Art/materials/dirt.tres" id="6_vxpnh"]
[ext_resource type="PackedScene" uid="uid://g2jwt8atruu7" path="res://Art/environment/environment.tscn" id="7_14v6x"]
[ext_resource type="Shader" path="res://Art/environment/environment.gdshader" id="8_inq2l"]
[ext_resource type="PackedScene" uid="uid://bcou7suhphdrp" path="res://Elements/function/player/player.tscn" id="9_x6sai"]
[ext_resource type="PackedScene" uid="uid://bu6bhrpspw5wb" path="res://Art/blend/misc/bomb.blend" id="10_m2pb1"]
[ext_resource type="PackedScene" uid="uid://msdo88p274sw" path="res://Elements/function/objective.tscn" id="11_7br4y"]
[ext_resource type="PackedScene" uid="uid://cihisq18677xu" path="res://Elements/function/objective_item.tscn" id="12_twhdf"]
[ext_resource type="PackedScene" uid="uid://cdwnv2xmk7f6k" path="res://Elements/assets/misc/nest.tscn" id="13_yi4h1"]
[ext_resource type="PackedScene" uid="uid://i43wpwf0q6em" path="res://Elements/assets/props/chair.tscn" id="14_kvp6p"]
[ext_resource type="PackedScene" uid="uid://cdxkrkn34253v" path="res://Elements/assets/props/picture_large.tscn" id="15_w4a2k"]
[ext_resource type="PackedScene" uid="uid://dhaxwpsinvu6u" path="res://Elements/assets/props/crate.tscn" id="16_qgt5l"]
[ext_resource type="PackedScene" uid="uid://blx6snb20uj8u" path="res://Elements/assets/props/lamp.tscn" id="17_cl54t"]
[ext_resource type="PackedScene" uid="uid://bfrpck2673n1q" path="res://Elements/assets/props/coffin.tscn" id="18_xvge6"]
[ext_resource type="PackedScene" uid="uid://bsbl4boqt5vj4" path="res://Elements/assets/props/cone.tscn" id="19_f245b"]
[ext_resource type="PackedScene" uid="uid://currpdc0rou40" path="res://Elements/assets/props/couch_small.tscn" id="20_tgx7p"]
[ext_resource type="PackedScene" uid="uid://b4m1cj2hvwg7w" path="res://Elements/assets/props/tree.tscn" id="21_likqs"]
[ext_resource type="PackedScene" uid="uid://1k5dw6s6pdvj" path="res://Elements/assets/props/stool_1.tscn" id="22_jmdym"]
[ext_resource type="PackedScene" uid="uid://b8yxaet5rm1ae" path="res://Elements/assets/props/brick.tscn" id="23_rqnl8"]
[ext_resource type="PackedScene" uid="uid://ctc20d63lt2h0" path="res://Elements/assets/props/bucket.tscn" id="24_g2pt1"]
[ext_resource type="AudioStream" uid="uid://bk21fh4nmssl0" path="res://Art/audio/ambient/ambient_stinger01.wav" id="25_r2v44"]
[ext_resource type="AudioStream" uid="uid://die3t2e5pjrof" path="res://Art/audio/enemy/bomber_buildup-2.wav" id="26_06cbc"]
[ext_resource type="AudioStream" uid="uid://pghiaut11xhv" path="res://Art/audio/misc/loud_ending_explosion.wav" id="26_h5xxs"]
[ext_resource type="AudioStream" uid="uid://co1bf3eh4kfj8" path="res://Art/audio/misc/short-beep-tone-47916.mp3" id="27_e6j0y"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nj7b7"]
render_priority = 0
shader = ExtResource("3_eni4t")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1vfaw"]
render_priority = 0
shader = ExtResource("6_vxpnh")

[sub_resource type="Gradient" id="Gradient_pgec4"]
interpolation_mode = 1
offsets = PackedFloat32Array(0.35443, 0.759494)
colors = PackedColorArray(0, 0, 0, 1, 0.648095, 0.112596, 0.16397, 0.419608)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_4okqe"]
noise_type = 3
frequency = 0.0042
cellular_return_type = 0
domain_warp_type = 1

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_6pjfi"]
width = 1024
height = 1024
in_3d_space = true
seamless = true
color_ramp = SubResource("Gradient_pgec4")
noise = SubResource("FastNoiseLite_4okqe")

[sub_resource type="Gradient" id="Gradient_n4hhs"]
offsets = PackedFloat32Array(0, 0.740506, 1)
colors = PackedColorArray(0, 0.00283045, 0, 1, 0.0763027, 0.0146269, 0.00375457, 1, 0.346075, 0.0320814, 0.0322837, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_5sv87"]
noise_type = 2
fractal_type = 2
cellular_jitter = 1.915
domain_warp_enabled = true

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_uhrgb"]
seamless = true
color_ramp = SubResource("Gradient_n4hhs")
noise = SubResource("FastNoiseLite_5sv87")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y7ns5"]
shader = ExtResource("8_inq2l")
shader_parameter/cloudlayer1 = SubResource("NoiseTexture2D_6pjfi")
shader_parameter/cloudlayer2 = SubResource("NoiseTexture2D_uhrgb")

[sub_resource type="Sky" id="Sky_qpxpt"]
sky_material = SubResource("ShaderMaterial_y7ns5")

[sub_resource type="Environment" id="Environment_a155t"]
background_mode = 2
background_color = Color(0.703808, 0.703808, 0.703808, 1)
sky = SubResource("Sky_qpxpt")
ambient_light_source = 2
ambient_light_color = Color(0.0768358, 0.0768358, 0.0768358, 1)
glow_enabled = true
glow_intensity = 1.25
glow_bloom = 1.0
fog_light_color = Color(0, 0, 0, 1)
fog_light_energy = 0.5
fog_density = 0.005
fog_aerial_perspective = 1.0
volumetric_fog_enabled = true
volumetric_fog_density = 0.1
volumetric_fog_albedo = Color(0.665915, 0.732849, 0.581883, 1)
volumetric_fog_emission_energy = 0.0
volumetric_fog_sky_affect = 0.0
volumetric_fog_temporal_reprojection_enabled = false
volumetric_fog_temporal_reprojection_amount = 0.739

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_i13ir"]
emission_shape = 3
emission_box_extents = Vector3(10, 1, 10)
direction = Vector3(0, 1, 0)
initial_velocity_min = 5.0
initial_velocity_max = 5.0
gravity = Vector3(0, 0, 0)
turbulence_noise_strength = 17.86
turbulence_noise_scale = 2.453
turbulence_noise_speed = Vector3(4.985, 0, 0)
collision_mode = 1
collision_friction = 0.0
collision_bounce = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vuu04"]
albedo_color = Color(0.953882, 0.445922, 0.248027, 1)
emission_enabled = true
emission = Color(0.739298, 0.295672, 0.121221, 1)
emission_energy_multiplier = 16.0
billboard_mode = 2

[sub_resource type="QuadMesh" id="QuadMesh_g0o1m"]
material = SubResource("StandardMaterial3D_vuu04")
size = Vector2(0.4, 0.4)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5s4ye"]
albedo_color = Color(0.572983, 0.149685, 0, 1)
emission_enabled = true
emission = Color(1, 0, 0, 1)
emission_energy_multiplier = 16.0

[sub_resource type="SphereMesh" id="SphereMesh_7u1r4"]
material = SubResource("StandardMaterial3D_5s4ye")
radius = 0.25
height = 0.5

[sub_resource type="BoxShape3D" id="BoxShape3D_g6hy6"]

[sub_resource type="BoxShape3D" id="BoxShape3D_hcx48"]
size = Vector3(10, 6, 6)

[sub_resource type="BoxShape3D" id="BoxShape3D_uoxyc"]
size = Vector3(25, 11, 11)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_w82no"]
particle_flag_align_y = true
spread = 180.0
initial_velocity_min = 50.0
initial_velocity_max = 50.0
turbulence_noise_strength = 20.0
turbulence_noise_speed = Vector3(3.88, 2.99, 2.125)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_esq4h"]
albedo_color = Color(1, 0.521569, 0, 1)
emission_enabled = true
emission = Color(1, 0.603922, 0, 1)
emission_energy_multiplier = 5.0

[sub_resource type="CylinderMesh" id="CylinderMesh_b3ubu"]
material = SubResource("StandardMaterial3D_esq4h")
top_radius = 0.0
bottom_radius = 1.326

[node name="L10" type="Node3D"]
script = ExtResource("1_1wb2c")

[node name="c1_m10" parent="." instance=ExtResource("2_sr2kr")]

[node name="Ground" parent="c1_m10" index="1"]
surface_material_override/0 = SubResource("ShaderMaterial_nj7b7")

[node name="Floor" parent="c1_m10" index="3"]
surface_material_override/0 = ExtResource("4_jphlb")

[node name="Walls" parent="c1_m10" index="4"]
surface_material_override/0 = ExtResource("5_xsm5t")

[node name="Dirt" parent="c1_m10" index="7"]
surface_material_override/0 = SubResource("ShaderMaterial_1vfaw")

[node name="WorldEnvironment" parent="." instance=ExtResource("7_14v6x")]
environment = SubResource("Environment_a155t")

[node name="Player" parent="." instance=ExtResource("9_x6sai")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.24783, 0)

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -50.3266, -2.41898, 0)
amount = 50
lifetime = 5.1
process_material = SubResource("ParticleProcessMaterial_i13ir")
draw_pass_1 = SubResource("QuadMesh_g0o1m")

[node name="GPUParticlesCollisionBox3D" type="GPUParticlesCollisionBox3D" parent="GPUParticles3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 21, 9, 0)
size = Vector3(16, 20, 18)

[node name="bomb" parent="." instance=ExtResource("10_m2pb1")]
transform = Transform3D(-0.485578, 1.8122, -0.692922, -1.93185, -0.517638, -8.13699e-10, -0.179341, 0.669311, 1.87613, 11, 0.796307, 0.247498)

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="bomb"]
transform = Transform3D(0.5, 2.23517e-08, -7.45058e-08, -1.86265e-09, 0.5, -1.49012e-07, 0, 0, 0.5, -0.482963, -0.12941, 1.19209e-07)

[node name="Bulb" type="MeshInstance3D" parent="bomb"]
transform = Transform3D(1, -1.11759e-08, 6.70552e-08, -2.42144e-08, 1, 3.8743e-07, 7.45058e-09, 0, 1, -1.81676, 0.000274181, -0.00378382)
visible = false
mesh = SubResource("SphereMesh_7u1r4")

[node name="OmniLight3D" type="OmniLight3D" parent="bomb"]
transform = Transform3D(1, 3.72529e-09, 1.11022e-15, -3.72529e-09, 1, 0, -1.11022e-15, -4.1359e-24, 1, -2.13535, -0.0672674, -0.00356936)
visible = false
light_color = Color(1, 0, 0, 1)
light_energy = 7.085
shadow_enabled = true
omni_range = 87.856

[node name="ObjectiveLevelStart" parent="." instance=ExtResource("11_7br4y")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.553791, 0)
nextscene_string = "res://Elements/function/demo_complete_screen.tscn"

[node name="CollisionShape3D" parent="ObjectiveLevelStart/carraige/PlayerDetector" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0423584, -15, 0.0766602)
shape = SubResource("BoxShape3D_g6hy6")

[node name="ObjectiveItem" parent="." instance=ExtResource("12_twhdf")]
transform = Transform3D(0.993965, 0.0204767, 0.107772, 0, 0.982424, -0.186661, -0.1097, 0.185535, 0.976495, -31.6989, 1.3, 3.42189)

[node name="nest" parent="." instance=ExtResource("13_yi4h1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -31.7554, 0.30608, 3.29495)

[node name="Props" type="Node" parent="."]

[node name="chair" parent="Props" instance=ExtResource("14_kvp6p")]
transform = Transform3D(0.258819, 0, -0.965926, 0, 1, 0, 0.965926, 0, 0.258819, -32.9223, 1.8477, 0.433692)

[node name="picture_large" parent="Props" instance=ExtResource("15_w4a2k")]
transform = Transform3D(1.19209e-07, -1, -4.37114e-08, 0, -4.37114e-08, 1, -1, -1.19209e-07, -5.32907e-15, -15, 4, 2.55639)

[node name="crate" parent="Props" instance=ExtResource("16_qgt5l")]
transform = Transform3D(0.981544, 0, 0.191237, 0, 1, 0, -0.191237, 0, 0.981544, -16.2932, 1, 2.50469)

[node name="lamp" parent="Props" instance=ExtResource("17_cl54t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16.2564, 2.75656, 2.30261)

[node name="coffin" parent="Props" instance=ExtResource("18_xvge6")]
transform = Transform3D(0.212109, 0, 0.977246, 0, 1, 0, -0.977246, 0, 0.212109, -22.4835, 1, 7.69158)

[node name="cone" parent="Props" instance=ExtResource("19_f245b")]
transform = Transform3D(0.969261, 0, 0.246035, 0, 1, 0, -0.246035, 0, 0.969261, -22.3789, 2.90508, 7.57693)

[node name="couch_small" parent="Props" instance=ExtResource("20_tgx7p")]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, -11.843, 1.52474, 6.99339)

[node name="tree" parent="Props" instance=ExtResource("21_likqs")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, -1)

[node name="stool_1" parent="Props" instance=ExtResource("22_jmdym")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19.1376, 1.34378, -3.95893)

[node name="brick" parent="Props" instance=ExtResource("23_rqnl8")]
transform = Transform3D(0.614519, 0, 0.788902, 0, 1, 0, -0.788902, 0, 0.614519, -19.1511, 2.32169, -3.94619)

[node name="bucket" parent="Props" instance=ExtResource("24_g2pt1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19.1345, 3.32236, -3.93251)

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(-0.258819, -0.965926, 0, -4.2222e-08, 1.13133e-08, 1, -0.965926, 0.258819, -4.37114e-08, 11, 7, 0)
light_volumetric_fog_energy = 0.0
spot_range = 11.912

[node name="DialogueTrigger" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -28, 0, 3)

[node name="CollisionShape3D" type="CollisionShape3D" parent="DialogueTrigger"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 2.5, -0.5)
shape = SubResource("BoxShape3D_hcx48")

[node name="EndingTrigger" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="EndingTrigger"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 5, 0)
shape = SubResource("BoxShape3D_uoxyc")

[node name="ShockStinger" type="AudioStreamPlayer" parent="."]
stream = ExtResource("25_r2v44")
bus = &"ambience"

[node name="BombStinger" type="AudioStreamPlayer" parent="."]
stream = ExtResource("26_06cbc")
volume_db = 10.13
pitch_scale = 0.6
bus = &"sfx"

[node name="BombStinger2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("27_e6j0y")
pitch_scale = 2.5
bus = &"sfx"

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="Explosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource("26_h5xxs")
volume_db = 24.0
pitch_scale = 0.32

[node name="ExplosionParticles" type="GPUParticles3D" parent="."]
transform = Transform3D(1.54, 0, 0, 0, 1.54, 0, 0, 0, 1.54, 11, 2, 0)
emitting = false
amount = 50
lifetime = 0.08
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_w82no")
draw_pass_1 = SubResource("CylinderMesh_b3ubu")

[node name="ExplosionEffects" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
visible = false
light_energy = 100.0

[node name="Black" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="Black"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[connection signal="animation_finished" from="ObjectiveLevelStart/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="DialogueTrigger" to="." method="_on_trigger_body_entered"]
[connection signal="body_entered" from="EndingTrigger" to="." method="_on_ending_trigger_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]

[editable path="c1_m10"]
[editable path="ObjectiveLevelStart"]
